master for inclusion

--- a/css/style.css
+++ b/css/style.css
@@ -2420,7 +2420,7 @@ h1, h2, h3, h4, h5, h6, b, strong{
 }
 
 .resources-post #secondary{
-	padding:0 0 0 15px;
+	padding:30px 0 0 15px;
 }
 
 .resources-post .widget ul{
