--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,20 @@
+h1,h2,h3,h4,h5,h6,p,.fontLato{
+	 font-family: Lato !important;
+    font-weight: 1000 !important;
+	letter-spacing:0.75px !important;
+	color:#bbb !important;
+}
+
 #editSection{
 	width:100%;
+	color:#777 !important;
 }
 .termsCondition{
 	color:#1391ff;
 	display: inline-block;
 	padding:6px 12px 6px 0px;
+	font-weight: 1000;
+    font-size: 16px;
 }
 .resources-post-content{
 	padding-top:30px;
@@ -13,11 +23,135 @@
     border-radius: 50%;
     width: 36px;
     height: 36px;
-    padding: 8px;
-   	font-weight:bold;
+   	font-weight:1000;
     background: #FDA403;
     color: #fff;
     text-align: center;
     display: inline-block;
-    font: 14px Arial, sans-serif;
+    font-family:Lato;
+	font-size:20px;
+}
+.fa.fa-check-circle {
+	color:#4A772F;
+}
+.resources-post-content label {
+    font-weight: 500;
+    letter-spacing: 0px;
+}
+ul.bs-autocomplete-menu {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  overflow: auto;
+  z-index: 9999;
+  border: 1px solid #eeeeee;
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0px 1px 6px 1px rgba(0, 0, 0, 0.4);
+}
+
+ul.bs-autocomplete-menu a {
+  font-weight: normal;
+  color: #333333;
+}
+
+.ui-helper-hidden-accessible {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.ui-state-active,
+.ui-state-focus {
+  color: #23527c;
+  background-color: #eeeeee;
+}
+
+.bs-autocomplete-feedback {
+  width: 1.5em;
+  height: 1.5em;
+  overflow: hidden;
+  margin-top: .5em;
+  margin-right: .5em;
+}
+
+.loader {
+  font-size: 10px;
+  text-indent: -9999em;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  background: #333;
+  background: -moz-linear-gradient(left, #333333 10%, rgba(255, 255, 255, 0) 42%);
+  background: -webkit-linear-gradient(left, #333333 10%, rgba(255, 255, 255, 0) 42%);
+  background: -o-linear-gradient(left, #333333 10%, rgba(255, 255, 255, 0) 42%);
+  background: -ms-linear-gradient(left, #333333 10%, rgba(255, 255, 255, 0) 42%);
+  background: linear-gradient(to right, #333333 10%, rgba(255, 255, 255, 0) 42%);
+  position: relative;
+  -webkit-animation: load3 1.4s infinite linear;
+  animation: load3 1.4s infinite linear;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #333;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+}
+
+.loader:after {
+  background: #fff;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: '';
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@-webkit-keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+#suppAutoComplete{
+padding:25px 10px;
+margin-bottom:30px;
+}
+.section{
+	margin-bottom:50px;
 }
