--- a/css/style.css
+++ b/css/style.css
@@ -1290,8 +1290,8 @@ h1, h2, h3, h4, h5, h6, b, strong{
 
 .contact-form{
 	display:inline-block;
-	width:80%;
-	margin:30px auto 0;
+	width:100%;
+	margin-top:10px;
 	text-align:center;
 }
 .contact-form label{
@@ -1308,7 +1308,7 @@ h1, h2, h3, h4, h5, h6, b, strong{
 .contact-form input[type="email"],
 .contact-form textarea{
 	width:100%;
-	padding:15px;
+	padding:10px;
 	font-size:16px;
 	font-weight:300;
 	color:#323031;
@@ -2247,7 +2247,7 @@ h1, h2, h3, h4, h5, h6, b, strong{
 	color:#787878;
 	font-size:17px;
 	line-height:30px;
-	margin:0 0 30px;
+	margin:0 0 20px;
 	display:inline-block;
 }
 
