--- a/css/style.css
+++ b/css/style.css
@@ -1295,9 +1295,9 @@ h1, h2, h3, h4, h5, h6, b, strong{
 	text-align:center;
 }
 .contact-form label{
-	font-size:16px;
+	font-size: 14px;
 	color:#323031;
-	margin:0 0 20px;
+	margin: 0 0 10px;
 	font-weight:600;
 	font-family: 'Open Sans';
 	text-align:left;
@@ -1308,9 +1308,9 @@ h1, h2, h3, h4, h5, h6, b, strong{
 .contact-form input[type="email"],
 .contact-form textarea{
 	width:100%;
-	padding:15px;
-	font-size:16px;
-	font-weight:300;
+	padding: 5px 10px;
+	font-size: 14px;
+	font-weight: 1000;
 	color:#323031;
 	border:1px solid #ccc;
 	background:#fff;
@@ -2209,11 +2209,11 @@ h1, h2, h3, h4, h5, h6, b, strong{
 }
 
 .resources-post .resources-post-content h1{
-	font-size:36px;
+	font-size: 26px;
 	color:#323031;
-	line-height:50px;
+	line-height: 25px;
 	font-weight:300;
-	margin:0 0 40px;
+	margin: 0 0 20px;
 }
 
 .resources-post .resources-post-content .post-meta{
@@ -2245,9 +2245,9 @@ h1, h2, h3, h4, h5, h6, b, strong{
 
 .resources-post .resources-post-content p{
 	color:#787878;
-	font-size:17px;
-	line-height:30px;
-	margin:0 0 30px;
+	font-size: 15px;
+	line-height: 25px;
+	margin: 0 0 10px;
 	display:inline-block;
 }
 
