--- a/css/core.css
+++ b/css/core.css
@@ -216,7 +216,8 @@ hr {
     background-color: rgba(51, 51, 51, 0.1);
     border: 0;
     height: 1px;
-    margin-bottom: 1.6em;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 
@@ -505,7 +506,7 @@ table {
 }
 
 a {
-  color: #757575;
+  color: #337ab7;
   -moz-transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
   -ms-transition: all 0.3s ease-in-out 0s;
