--- a/css/custom.css
+++ b/css/custom.css
@@ -186,3 +186,65 @@ ul.bs-autocomplete-menu a {
 .fa.fa-smile-o{
 color:#fda403;
 }
+.styled-checkbox {
+  position: absolute;
+  opacity: 0;
+}
+.styled-checkbox + label {
+  position: relative;
+  cursor: pointer;
+  padding: 0;
+  font-size: 16px;
+}
+.styled-checkbox + label:before {
+  content: '';
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: text-top;
+  width: 30px;
+  height: 30px;
+  background: white;
+  border: solid thin #ccc;
+}
+.styled-checkbox:hover + label:before {
+  background: #34f329;
+}
+.styled-checkbox:focus + label:before {
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
+}
+.styled-checkbox:checked + label:before {
+  background: #6cf329;
+}
+.styled-checkbox:disabled + label {
+  color: #b8b8b8;
+  cursor: auto;
+}
+.styled-checkbox:disabled + label:before {
+  box-shadow: none;
+  background: #ddd;
+}
+.styled-checkbox:checked + label:after {
+  content: '';
+  position: absolute;
+  left: 9px;
+  top: 14px;
+  background: white;
+  width: 2px;
+  height: 2px;
+  box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.signup-text{
+    margin-bottom: 3px;
+    display: inline-block;
+    position: relative;
+    top: -14px;
+}
+ .fa.signupcomplete{
+ font-size: 66px;
+ color:green;
+ font-weight: 500;
+ margin-right: 10px;
+ }
+
